<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="price_format">%s</string>
    <string name="area_format">%d m²</string>
    <string name="rooms_format">%d rooms</string>
    <string name="bottom_login">Sign in with Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">sign Up</string>
    <string name="log_in">Log in</string>
    <string name="connection_succeed">Connection succeed</string>
    <string name="error_no_internet">Error no internet!</string>
    <string name="error_unknown_error">"Error unknown "</string>
    <string name="error_authentication_failed">Error authentication failed!</string>
    <string name="error_authentication_canceled">Error authentication canceled</string>
    <string name="reset_password_email_sent">A password reset email has been sent. Please check your inbox.\n</string>
    <string name="error_sending_reset_email">Failed to send reset email. Please try again.</string>
    <string name="price">PRICE\n</string>
    <string name="surface">SURFACE\n</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="property_form">Property Form</string>
    <string name="submit2">Submit</string>
    <string name="sold2">Sold</string>
    <string name="sale_date">Sale Date</string>
    <string name="property_form2">Property Form</string>
    <string name="price2">Price</string>
    <string name="rooms">Rooms</string>
    <string name="surface2">Surface</string>
    <string name="address_hint">Address</string>
    <string name="description">Description</string>
    <string name="sold3">Sold</string>
    <string name="on_sale">On Sale</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="nearby">Nearby</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Property status -->
    <string name="sold">Sold</string>
    <string name="for_sale">For Sale</string>
    <!-- Error or notification messages -->
    <string name="entry_date_not_available">Entry date not available</string>
    <string name="sold_date_not_available">Sold date not available</string>
</resources>
