<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Container pour l'en-tête avec ombre et arrondi -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewTitle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="100dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <!-- Icône de la maison -->
        <ImageView
            android:id="@+id/imageViewHouseIcon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_house_white_24"
            android:layout_marginStart="16dp"
             />

        <!-- Titre du formulaire -->
        <TextView
            android:id="@+id/tvPropertyForm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/property_form2"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/imageViewHouseIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.cardview.widget.CardView>

    <Spinner
        android:id="@+id/spinnerType"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/spinner_background"
        android:spinnerMode="dropdown"
        android:layout_marginTop="20dp"
        android:autofillHints="Type"
        app:layout_constraintTop_toBottomOf="@+id/cardViewTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintWidth_percent="0.9"/>

    <EditText
        android:id="@+id/editTextPrice"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/price2"
        android:inputType="number"
        android:ems="10"
        android:textSize="16sp"
        android:padding="12dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/spinner_background"
        app:layout_constraintTop_toBottomOf="@id/spinnerType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.9"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextRooms"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/rooms"
        android:inputType="number"
        android:ems="10"
        android:textSize="16sp"
        android:padding="12dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/spinner_background"
        app:layout_constraintTop_toBottomOf="@id/editTextPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.9"/>

    <EditText
        android:id="@+id/editTextSurface"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/surface2"
        android:inputType="number"
        android:ems="10"
        android:textSize="16sp"
        android:padding="12dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/spinner_background"
        app:layout_constraintTop_toBottomOf="@id/editTextRooms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.9"/>

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextViewAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address_hint"
        android:layout_marginTop="10dp"
        android:background="@drawable/spinner_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSurface"/>



    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:ems="10"
        android:textSize="16sp"
        android:padding="12dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/spinner_background"
        app:layout_constraintTop_toBottomOf="@id/autoCompleteTextViewAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.9"/>

    <Spinner
        android:id="@+id/spinnerNearby"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/spinner_background"
        android:spinnerMode="dropdown"
        android:layout_marginTop="20dp"
        android:autofillHints="Type"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintWidth_percent="0.9"/>

    <TextView
        android:id="@+id/textViewOnSale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_sale"
        android:textColor="#3BAF40"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerNearby"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchSold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:thumbTint="@drawable/switch_thumb_selector"
        android:trackTint="@drawable/switch_track_selector"
        app:layout_constraintTop_toBottomOf="@id/spinnerNearby"
        app:layout_constraintStart_toEndOf="@+id/textViewOnSale"
        android:layout_marginStart="10dp"
        android:layout_marginTop="26dp"
         />

    <TextView
        android:id="@+id/textViewSold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sold3"
        android:textColor="#AC291F"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/switchSold"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/spinnerNearby"
         />




</androidx.constraintlayout.widget.ConstraintLayout>
